feat: documentando rota para listar morador
